# Large-Model-Tutorial

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_PR_GUIDE.md  INITIALIZATION_SUMMARY.md  NEXT_STEPS.md  P0_COMPLETION_REPORT.md  P1_COMPLETION_REPORT.md  P1_PHASE_PLAN.md  PR-v1.1.0-description.md  PR_DESCRIPTION.md  QUICK_SETUP_GUIDE.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  TODO完成情况报告.md  environment.yml  pyproject.toml  pytest.ini  quick_start_clip.py  requirements-dev.txt  requirements-gpu.txt  requirements.txt  requirements_test.txt  setup.py  如何运行自动设置脚本.md  开始前必读.md  教程开发-TODO清单-v2修订说明.md  教程开发-TODO清单.md  设计文档-v3.1修订说明.md  设计文档-v3.2修订说明.md  设计文档-v3修订说明.md  设计文档-更新摘要.md  设计文档.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SETUP_GUIDE.md  issues-p0-mvp.md  labels.yml  milestones.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  feedback.yml  question.yml  task.yml
.github/workflows/: README.md  docs.yml  lint.yml  release.yml  test.yml
code/01-model-evaluation/: README.md
code/02-fine-tuning/: README.md
code/03-data-processing/: README.md
code/04-deployment/: README.md
code/utils/: logger.py  (+4 more)
configs/: base.yaml
docker/: Dockerfile.huawei  Dockerfile.nvidia  OFFLINE_INSTALL.md  README.md  docker-compose.yml
docs/: API文档.md  ROADMAP.md  命令行工具.md
logs/: CHANGELOG.md  README.md
notebooks/: 01_lora_finetuning_tutorial.ipynb  02_full_finetuning_tutorial.ipynb  03_sam_segmentation_tutorial.ipynb  04_blip2_vqa_tutorial.ipynb  05_internvl_qwenvl_comparison.ipynb  06_end_to_end_visual_ai_project.ipynb  07_performance_optimization.ipynb  README.md
scripts/: benchmark.sh  create_blip2_notebook.py  create_github_labels.sh  create_sam_notebook.py  download_models.sh  generate_notebooks.py  init_project.sh  prepare_data.sh  prepare_dog_dataset.py  run_benchmarks.sh  setup.sh  setup_github.py
tests/: README.md  conftest.py
(+129 files in other folders)
